--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,93 @@
 <!DOCTYPE html>
 <!-- 声明文档类型为 HTML5 -->
-<html lang="en">
-<!-- 设置网页语言为英语 -->
+<html lang="zh-CN">
+<!-- 设置网页语言为中文 -->
 <head>
   <!-- 头部信息开始 -->
   <meta charset="UTF-8" />
   <!-- 设置字符编码为 UTF-8，支持中文等多语言字符 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- 设置视口，使网页在移动设备上正确显示，initial-scale=1.0 表示初始缩放比例为 1 -->
-  <title>Portfolio</title>
+  <meta name="description" content="Lingchen Song - Cloud Developer Portfolio" />
+  <title>Lingchen Song - Portfolio</title>
   <!-- 网页标题 -->
   <link href="./dist/output.css" rel="stylesheet" />
   <!-- 引入编译后的 Tailwind CSS 样式文件 -->
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-gray-50 text-gray-900 font-sans leading-relaxed">
   <!-- 主体开始，使用 Tailwind 类：
-       bg-gray-100: 设置浅灰色背景
+       bg-gray-50: 设置浅灰色背景
        text-gray-900: 设置深灰色文字 -->
-  <div class="max-w-xl mx-auto text-center py-20">
-    <!-- 容器 div：
-         max-w-xl: 最大宽度为 xl（36rem/576px）
-         mx-auto: 水平居中
-         text-center: 文字居中
-         py-20: 上下内边距为 20（5rem/80px） -->
-    <h1 class="text-4xl font-bold">Hello, I'm Jibril</h1>
-    <!-- 标题：
-         text-4xl: 大号文字（2.25rem/36px）
-         font-bold: 粗体 -->
-    <p class="mt-4">Welcome to my portfolio website!</p>
-    <!-- 段落：
-         mt-4: 上边距为 4（1rem/16px） -->
-  </div>
+  <!-- Header Section -->
+  <header class="min-h-screen flex items-center justify-center px-4">
+    <div class="max-w-4xl mx-auto text-center">
+      <!-- Hero Section -->
+      <section class="mb-16">
+        <h1 class="text-5xl md:text-6xl font-bold text-gray-900 mb-6">
+          Hi, I'm <span class="text-blue-600">Lingchen Song</span>
+        </h1>
+        <p class="text-xl md:text-2xl text-gray-600 mb-8">
+          Cloud Developer based in Japan
+        </p>
+        <p class="text-lg text-gray-700 max-w-2xl mx-auto">
+          With experience in Machine Learning especially in NLP. 
+          Currently working at NISSAN MOTOR CO.,LTD. as a Cloud Developer.
+        </p>
+      </section>
+
+      <!-- Education Section -->
+      <section class="mb-16">
+        <h2 class="text-3xl font-bold text-gray-800 mb-8">Education</h2>
+        <div class="grid md:grid-cols-2 gap-8 max-w-4xl">
+          <!-- Master's Degree -->
+          <div class="bg-white rounded-lg shadow-md p-6 border-l-4 border-blue-600 hover:shadow-lg transition-shadow">
+            <h3 class="text-xl font-semibold text-gray-900 mb-2">Master of Engineering</h3>
+            <p class="text-blue-600 font-medium mb-2">Kyoto University</p>
+            <p class="text-gray-600 mb-2">Graduate School of Informatics, System Science</p>
+            <p class="text-sm text-gray-500">2021 - 2023</p>
+          </div>
+          
+          <!-- Bachelor's Degree -->
+          <div class="bg-white rounded-lg shadow-md p-6 border-l-4 border-green-600 hover:shadow-lg transition-shadow">
+            <h3 class="text-xl font-semibold text-gray-900 mb-2">Bachelor of Engineering</h3>
+            <p class="text-green-600 font-medium mb-2">East China University of Science and Technology</p>
+            <p class="text-gray-600 mb-2">Computer Science and Technology</p>
+            <p class="text-sm text-gray-500">2017 - 2021</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section>
+        <h2 class="text-3xl font-bold text-gray-800 mb-8">Connect With Me</h2>
+        <div class="flex justify-center space-x-4">
+          <a 
+            href="https://github.com/jibril2333" 
+            target="_blank"
+            rel="noopener noreferrer"
+            class="btn-primary"
+          >
+            <img 
+              src="assets/github-mark/github-mark.png" 
+              alt="GitHub" 
+              class="w-8 h-8 mr-2 object-contain" 
+            />
+          </a>
+          <a 
+            href="https://instagram.com/jibril2333" 
+            target="_blank"
+            rel="noopener noreferrer"
+            class="btn-primary"
+          >
+            <img 
+              src="assets/IG_brand_asset_pack_2023/01 Static Glyph/01 Gradient Glyph/Instagram_Glyph_Gradient.png" 
+              alt="Instagram" 
+              class="w-8 h-8 object-contain" 
+            />
+          </a>
+        </div>
+      </section>
+    </div>
+  </header>
 </body>
 </html>
