fix: resolve Tailwind CSS usage issue

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <meta name="description" content="Lingchen Song - Cloud Developer Portfolio" />
   <title>Lingchen Song - Portfolio</title>
   <!-- 网页标题 -->
+  <script src="https://cdn.tailwindcss.com"></script>
   <link href="./dist/output.css" rel="stylesheet" />
   <!-- 引入编译后的 Tailwind CSS 样式文件 -->
 </head>
@@ -30,7 +31,7 @@
           Cloud Developer based in Japan
         </p>
         <p class="text-lg text-gray-700 max-w-2xl mx-auto">
-          With experience in Machine Learning especially in NLP. 
+          With experience in Machine Learning especially in NLP. <br>
           Currently working at NISSAN MOTOR CO.,LTD. as a Cloud Developer.
         </p>
       </section>
@@ -60,29 +61,27 @@
       <!-- Contact Section -->
       <section>
         <h2 class="text-3xl font-bold text-gray-800 mb-8">Connect With Me</h2>
-        <div class="flex justify-center space-x-4">
+        <div class="social-icons">
           <a 
             href="https://github.com/jibril2333" 
             target="_blank"
             rel="noopener noreferrer"
-            class="btn-primary"
+            aria-label="GitHub"
           >
             <img 
-              src="assets/github-mark/github-mark.png" 
-              alt="GitHub" 
-              class="w-8 h-8 mr-2 object-contain" 
+              src="assets/icons/github-mark.svg"
+              alt="GitHub Icon"
             />
           </a>
           <a 
             href="https://instagram.com/jibril2333" 
             target="_blank"
             rel="noopener noreferrer"
-            class="btn-primary"
+            aria-label="Instagram"
           >
             <img 
-              src="assets/IG_brand_asset_pack_2023/01 Static Glyph/01 Gradient Glyph/Instagram_Glyph_Gradient.png" 
-              alt="Instagram" 
-              class="w-8 h-8 object-contain" 
+              src="assets/icons/Instagram_Glyph_Gradient.svg" 
+              alt="Instagram Icon"
             />
           </a>
         </div>
