refactor: migrate social icons to Tailwind classes
- Remove custom CSS for social icons
- Replace with Tailwind utility classes
- Update icon sizing and spacing
- Improve hover effects using Tailwind
- Clean up input.css file
- Use @apply for component styles

This change improves code maintainability and follows Tailwind best practices.

--- a/src/index.html
+++ b/src/index.html
@@ -61,16 +61,18 @@
       <!-- Contact Section -->
       <section>
         <h2 class="text-3xl font-bold text-gray-800 mb-8">Connect With Me</h2>
-        <div class="social-icons">
+        <div class="flex items-center justify-center gap-5 py-5">
           <a 
             href="https://github.com/jibril2333" 
             target="_blank"
             rel="noopener noreferrer"
             aria-label="GitHub"
+            class="inline-block transition-transform duration-300 hover:scale-110"
           >
             <img 
               src="assets/icons/github-mark.svg"
-              alt="GitHub Icon"
+              alt="GitHub Icon" 
+              class="w-6 h-6 block object-contain"
             />
           </a>
           <a 
@@ -78,10 +80,12 @@
             target="_blank"
             rel="noopener noreferrer"
             aria-label="Instagram"
+            class="inline-block transition-transform duration-300 hover:scale-110"
           >
             <img 
               src="assets/icons/Instagram_Glyph_Gradient.svg" 
-              alt="Instagram Icon"
+              alt="Instagram Icon" 
+              class="w-6 h-6 block object-contain"
             />
           </a>
         </div>
