fix: resolve Tailwind CSS configuration and compilation issues
- Remove global h1 style definition to prevent conflicts with Tailwind classes
- Ensure proper import of Tailwind CSS core layers
- Optimize CSS file structure by removing redundant styles

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <title>Lingchen Song - Portfolio</title>
   <!-- 网页标题 -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="./dist/output.css" rel="stylesheet" />
+  <link href="../dist/output.css" rel="stylesheet" />
   <!-- 引入编译后的 Tailwind CSS 样式文件 -->
 </head>
 <body class="bg-gray-50 text-gray-900 font-sans leading-relaxed">
@@ -57,6 +57,29 @@
           </div>
         </div>
       </section>
+
+      <!-- Hobbies Section -->
+      <section>
+        <h2 class="text-3xl font-bold text-gray-800 mb-8">我的兴趣爱好</h2>
+        <div class="grid md:grid-cols-3 gap-6">
+          <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition duration-300">
+            <img src="/images/photo.jpg" alt="Photography" class="w-full h-40 object-cover rounded">
+            <h3 class="text-xl font-semibold mt-4">📸 摄影</h3>
+            <p class="text-gray-600 mt-2">记录生活中的每一个灵感瞬间。</p>
+          </div>
+          <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition duration-300">
+            <img src="/images/travel.jpg" alt="Traveling" class="w-full h-40 object-cover rounded">
+            <h3 class="text-xl font-semibold mt-4">✈️ 旅行</h3>
+            <p class="text-gray-600 mt-2">探索世界，感受不同文化。</p>
+          </div>
+          <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition duration-300">
+            <img src="/images/code.jpg" alt="Coding" class="w-full h-40 object-cover rounded">
+            <h3 class="text-xl font-semibold mt-4">💻 编程</h3>
+            <p class="text-gray-600 mt-2">享受把想法变成现实的过程。</p>
+          </div>
+        </div>
+      </section>
+      
 
       <!-- Contact Section -->
       <section>
