feat: add anime page with responsive design and small screen optimizations

--- a/src/index.html
+++ b/src/index.html
@@ -75,11 +75,15 @@
             <h3 class="text-xl font-semibold mt-4">✈️ Travel</h3>
             <p class="text-gray-600 mt-2">I like to travel.</p>
           </div>
+
           <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition-all duration-300 hover:scale-105">
-            <img src="./assets/icons/rei.jpg" alt="Anime" class="w-full h-40 object-cover rounded">
-            <h3 class="text-xl font-semibold mt-4">🎥 Anime</h3>
-            <p class="text-gray-600 mt-2">I like to watch anime, especially Evangelion.</p>
+            <a href="anime.html" class="block">
+              <img src="./assets/icons/rei.jpg" alt="Anime" class="w-full h-40 object-cover rounded">
+              <h3 class="text-xl font-semibold mt-4">🎥 Anime</h3>
+              <p class="text-gray-600 mt-2">I like to watch anime, especially Evangelion.</p>
+            </a>
           </div>
+          
         </div>
       </section>
 
